--- a/tensorflow_io/core/plugins/az/BUILD
+++ b/tensorflow_io/core/plugins/az/BUILD
@@ -19,6 +19,7 @@ cc_library(
             "-s",
         ],
     }),
+    linkopts = ["-s"],
     linkstatic = True,
     deps = [
         "//tensorflow_io/core/plugins:plugins_header",
