--- a/tensorflow_io/core/plugins/s3/BUILD
+++ b/tensorflow_io/core/plugins/s3/BUILD
@@ -24,6 +24,7 @@ cc_library(
             "-s",
         ],
     }),
+    linkopts = ["-s"],
     linkstatic = True,
     deps = [
         "//tensorflow_io/core/plugins:plugins_header",
