--- a/tensorflow_io/core/plugins/az/BUILD
+++ b/tensorflow_io/core/plugins/az/BUILD
@@ -21,7 +21,7 @@ cc_library(
     linkopts = select({
         "@bazel_tools//src/conditions:windows": [],
         "//conditions:default": [
-            "--exclude-libs=ALL",
+            "-Wl,--exclude-libs=ALL",
         ],
     }),
     linkstatic = True,
