--- a/tensorflow_io/core/plugins/BUILD
+++ b/tensorflow_io/core/plugins/BUILD
@@ -11,7 +11,7 @@ genrule(
     name = "libtensorflow_c_framework",
     srcs = ["@local_config_tf//:libtensorflow_framework"],
     outs = ["libtensorflow_c_framework.so"],
-    cmd = "strip --wildcard -K TF_* $< -o $@",
+    cmd = "strip --wildcard -K TF_* $(location @local_config_tf//:libtensorflow_framework) -o $@",
 )
 
 cc_library(
