--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -174,6 +174,7 @@ jobs:
     needs: macos-wheel
     runs-on: macos-latest
     strategy:
+      fail-fast: false
       matrix:
         python: ['3.7', '3.8', '3.9']
     steps:
@@ -279,6 +280,7 @@ jobs:
     needs: linux-wheel
     runs-on: ubuntu-20.04
     strategy:
+      fail-fast: false
       matrix:
         python: ['3.7', '3.8', '3.9']
     steps:
