--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -74,6 +74,11 @@ jobs:
   linux:
     name: Linux
     runs-on: ubuntu-latest
+    container:
+      image: ubuntu:20.04
+      env:
+        REPO_NAME: ${{ env.REPO_NAME }}
+        EVENT_NAME: ${{ env.EVENT_NAME }}
     steps:
       - uses: actions/checkout@v2
       - name: GCP
@@ -82,18 +87,18 @@ jobs:
           ${{ secrets.GCP_CREDS }}
           EOF
       - name: Ubuntu 20.04
+        shell: bash
         run: |
           set -x -e
           export BAZEL_OPTIMIZATION="--config=cache"
           if [[ "${EVENT_NAME}" == "push" && "${REPO_NAME}" == "tensorflow/io" ]]; then
             export BAZEL_OPTIMIZATION="$BAZEL_OPTIMIZATION --remote_upload_local_results=true --google_credentials=service_account_creds.json"
           fi
-          bash -x -e .github/workflows/build.space.sh
+          apt update
+          apt-get install -y python3
           python3 .github/workflows/build.instruction.py docs/development.md "##### Ubuntu 20.04" > source.sh
           cat source.sh
-          docker run -i --rm -v $PWD:/v -w /v --net=host \
-            -e BAZEL_OPTIMIZATION="${BAZEL_OPTIMIZATION}" \
-            ubuntu:20.04 bash -x -e source.sh
+          bash -x -e source.sh
 
   macos-bazel:
     name: Bazel macOS
@@ -203,6 +208,11 @@ jobs:
   linux-bazel:
     name: Bazel Linux
     runs-on: ubuntu-latest
+    container:
+      image: gcr.io/tensorflow-testing/nosla-ubuntu16.04-manylinux2010@sha256:3a9b4820021801b1fa7d0592c1738483ac7abc209fc6ee8c9ef06cf2eab2d170
+      env:
+        REPO_NAME: ${{ env.REPO_NAME }}
+        EVENT_NAME: ${{ env.EVENT_NAME }}
     steps:
       - uses: actions/checkout@v2
       - name: GCP
@@ -211,16 +221,14 @@ jobs:
           ${{ secrets.GCP_CREDS }}
           EOF
       - name: Bazel on Linux
+        shell: bash
         run: |
           set -x -e
           export BAZEL_OPTIMIZATION="--config=ci --config=linux_ci --config=output_ci --config=cache"
           if [[ "${EVENT_NAME}" == "push" && "${REPO_NAME}" == "tensorflow/io" ]]; then
             export BAZEL_OPTIMIZATION="$BAZEL_OPTIMIZATION --remote_upload_local_results=true --google_credentials=service_account_creds.json"
           fi
-          bash -x -e .github/workflows/build.space.sh
-          docker run -i --rm -v $PWD:/v -w /v --net=host \
-            -e BAZEL_OPTIMIZATION="${BAZEL_OPTIMIZATION}" \
-            gcr.io/tensorflow-testing/nosla-ubuntu16.04-manylinux2010@sha256:3a9b4820021801b1fa7d0592c1738483ac7abc209fc6ee8c9ef06cf2eab2d170 /v/.github/workflows/build.bazel.sh
+          bash -x -e .github/workflows/build.bazel.sh
           sudo cp .bazelrc build/tensorflow_io/
       - uses: actions/upload-artifact@v2
         with:
